// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagePanelWithGraphic default 1`] = `
<DocumentFragment>
  <div
    data-cy="messagePanelWithGraphic"
  >
    <div
      class="css-spit4o"
      data-cy="spacingBox"
    >
      <img
        alt=""
        class="css-1jv97ae"
        role="presentation"
        src="http://placehold.it/350x150"
      />
    </div>
    <div
      class="css-5z0bq0"
      data-cy="spacingBox"
    >
      <div
        class="css-lkxn4w"
        data-cy="spacingBox"
      >
        <h2
          class="rmTextMargins css-ivxmqa"
          data-cy="headingText2"
        >
          Heading
        </h2>
      </div>
      <div
        class="css-1j4gpfm"
      >
        Body content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MessagePanelWithGraphic renders with primary and secondary actions 1`] = `
<DocumentFragment>
  <div
    data-cy="messagePanelWithGraphic"
  >
    <div
      class="css-spit4o"
      data-cy="spacingBox"
    >
      <img
        alt=""
        class="css-1jv97ae"
        role="presentation"
        src="http://placehold.it/350x150"
      />
    </div>
    <div
      class="css-spit4o"
      data-cy="spacingBox"
    >
      <div
        class="css-lkxn4w"
        data-cy="spacingBox"
      >
        <h2
          class="rmTextMargins css-ivxmqa"
          data-cy="headingText2"
        >
          Heading
        </h2>
      </div>
      <div
        class="css-1j4gpfm"
      >
        Body content
      </div>
    </div>
    <div
      class="css-1jqlr34"
      data-cy="flex"
    >
      <div
        class="css-1rmvaqm"
        data-cy="flexItem"
      >
        <button
          class="css-46zwjx css-1qbr1ah"
          data-cy="secondaryButton"
          tabindex="0"
          type="button"
        >
          <span
            class=""
          >
            Secondary
          </span>
        </button>
      </div>
      <div
        class="css-1rmvaqm"
        data-cy="flexItem"
      >
        <button
          class="css-tw2158 css-tc1f66"
          data-cy="primaryButton"
          tabindex="0"
          type="button"
        >
          <span
            class=""
          >
            Primary
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
